<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".principal"
    tools:showIn="@layout/app_bar_principal">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:layout_marginTop="20dp"
             android:src="@drawable/principal"
             android:layout_gravity="center"
             android:layout_weight="0.19" />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:text="Prof. R.S. Dalu"
              android:textSize="20dp"
              android:gravity="center"
              android:textColor="#FFF"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/princi_1"
            android:textColor="#FFF"
            android:padding="5dp"
            android:id="@+id/princi1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/princi_2"
                android:textColor="#FFF"
                android:padding="5dp"
                android:id="@+id/princi2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/princi_3"
                android:textColor="#FFF"
                android:padding="5dp"
                android:id="@+id/princi3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/princi_4"
                android:textColor="#FFF"
                android:padding="5dp"
                android:id="@+id/princi4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/princi_5"
                android:textColor="#FFF"
                android:padding="5dp"
                android:id="@+id/princi5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/princi_6"
                android:textColor="#FFF"
                android:padding="5dp"
                android:id="@+id/princi6"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/princi_7"
                android:textColor="#FFF"
                android:padding="5dp"
                android:id="@+id/princi7"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/princi_8"
                android:textColor="#FFF"
                android:padding="5dp"
                android:id="@+id/princi8"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
