<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="10dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_g2lc"
    tools:context=".g2lc"
    android:background="@drawable/login_background">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:id="@+id/g2lc1"
            android:text="Information:-"
            android:textSize="25dp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            />
        <TextView
            android:paddingTop="10dp"
            android:id="@+id/g2lc2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"

            android:text="@string/g2lc_info1"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:id="@+id/g2lc3"
            android:text="1. Try Echo\n2. Each One-Teach One\n3. Contribute"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/g2lc4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:paddingTop="5dp"
            android:text="@string/g2lc_info2"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/g2lc5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Our Activity:-"
            android:paddingTop="10dp"
            android:textSize="25dp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            />
        <TextView
            android:id="@+id/g2lc6"
            android:paddingTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"

            android:text="@string/g2lc_activity1"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/g2lc7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"
            android:text="@string/g2lc_activity2"
            android:textSize="15dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Our Helping Hands:-"
            android:paddingTop="10dp"
            android:id="@+id/g2lc8"
            android:textSize="25dp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ffffff"
            />
        <TextView
            android:id="@+id/g2lc9"
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"

            android:text="@string/g2lc_helping1"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/g2lc10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:paddingTop="10dp"
            android:text="@string/g2lc_final"
            android:textSize="15dp"/>



    </LinearLayout>
    </ScrollView>

</RelativeLayout>
