<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:background="@drawable/login_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_about" tools:context=".About"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/about_us1"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:id="@+id/abu"/>
        <ImageView
            android:paddingTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingTop="10dp"
            android:id="@+id/abu2"
            android:textSize="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us2"
            android:textColor="#FFFFFF"/>
        <ImageView
            android:paddingTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingTop="10dp"
            android:id="@+id/abu3"
            android:textSize="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us3"
            android:textColor="#FFFFFF"/>


    </LinearLayout>
    </ScrollView>
</RelativeLayout>
